--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 @import 'hero.css';
 @import 'features.css';
 @import 'routes.css';
+@import 'quiz-intro.css';
 @import 'gallery.css';
 @import 'video.css';
 @import 'special.css';
